little fix body margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,10 @@ a {
     flex-direction: column;
   }
 
+  body {
+    margin-right: auto;
+  }
+
   nav {
     order: 3;
   }
